Match deployment and source types in proto
